--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="nav-links">
                   <a href="index.html" class="nav-link"> HOME </a>
-                  <a href="#about" class="nav-link"> ABOUT </a>
+                  <a href="about.html" class="nav-link"> ABOUT </a>
                   <a href="#trending" class="nav-link"> TRENDING </a>
                   <a href="#" id="openModalBtn" class="nav-link">SETTINGS</a>
                   <a href="Search.html" class="nav-link"> SEARCH </a>
